fixed navbar scrollbar

--- a/styles.css
+++ b/styles.css
@@ -29,6 +29,18 @@ body::-webkit-scrollbar-thumb {
     background: #6649b8;
 }
 
+.navbar::-webkit-scrollbar {
+    width: 0.25rem;
+}
+
+.navbar::-webkit-scrollbar-track {
+    background: #1e1e24;
+}
+
+.navbar::-webkit-scrollbar-thumb {
+    background: #6649b8;
+}
+
 .navbar {
     width: 16rem;
     position: fixed;
